# cnn_from_scratch

./: CMakeLists.txt  README.md  network.txt  neural_net_in_cpp
.github/: pull_request_template.md
include/: Conv2d.cuh  FullyConnected.cuh  MaxPool.cuh  Module.h  NetworkModel.cuh  NetworkModel.h  ReLU.cuh  Tensor.h
src/: Conv2d.cpp  Conv2d.cu  FullyConnected.cu  MNISTDataLoader.cpp  MaxPool.cpp  MaxPool.cu  NetworkModel.cpp  NetworkModel.cu  ReLU.cu  SoftmaxClassifier.cpp  Tensor.cpp  main.cpp  main.cu  test.cpp  test.cu
